--- a/src/dspy_cli/templates/dspy.config.yaml.template
+++ b/src/dspy_cli/templates/dspy.config.yaml.template
@@ -22,6 +22,14 @@ models:
     #   temperature: 0.7
     #   model_type: chat
 
+    # Example: Custom API base (for local models, proxies, etc.)
+    # local:llama:
+    #   model: ollama/llama3
+    #   api_base: http://localhost:11434
+    #   max_tokens: 4096
+    #   temperature: 0.7
+    #   model_type: chat
+
 # Optional: Override the model for specific programs
 # program_models:
 #   MySpecialProgram: anthropic:sonnet-3.5
