--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "dspy-cli"
 version = "0.1.0"
 description = "A CLI tool for creating and serving DSPy projects"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
     {name = "DSPy CLI Contributors"}
@@ -17,19 +17,18 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "dspy-ai>=3.0.4b1",
+    "dspy-ai>=3.0.3",
     "click>=8.0",
     "fastapi>=0.100",
     "uvicorn[standard]>=0.20",
     "pyyaml>=6.0",
     "python-dotenv>=1.0",
     "pydantic>=2.0",
+    "requests>=2.28",
 ]
 
 [project.optional-dependencies]
@@ -54,3 +53,9 @@ target-version = ["py39"]
 [tool.ruff]
 line-length = 120
 target-version = "py39"
+
+[dependency-groups]
+dev = [
+    "docker>=7.1.0",
+    "python-multipart>=0.0.20",
+]
