--- a/src/dspy_cli/templates/dspy.config.yaml.template
+++ b/src/dspy_cli/templates/dspy.config.yaml.template
@@ -1,7 +1,7 @@
 # DSPy Configuration
 # Define your language models and their settings here
 
-app-id: {app_id}
+app_id: {app_id}
 models:
   # The default model to use if no per-program override is specified
   default: openai:gpt-5-mini
