--- a/src/dspy_cli/templates/code_templates/module_program_of_thought.py.template
+++ b/src/dspy_cli/templates/code_templates/module_program_of_thought.py.template
@@ -12,5 +12,5 @@ class {class_name}(dspy.Module):
         super().__init__()
         self.predictor = dspy.ProgramOfThought({signature_class})
 
-    def forward(self, {forward_args}):
-        return self.predictor({forward_kwargs})
+    def forward(self, **kwargs):
+        return self.predictor(**kwargs)
