--- a/examples/code-review-agent/pyproject.toml
+++ b/examples/code-review-agent/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "dspy-code-review-agent"
+name = "code-review-agent"
 version = "0.1.0"
 description = "A DSPy project"
 readme = "README.md"
