Polishing blog-tools example

--- a/examples/blog-tools/dspy.config.yaml
+++ b/examples/blog-tools/dspy.config.yaml
@@ -1,5 +1,6 @@
 # Define your language models and their settings here
 app_id: blog-tools
+description: "A set of functions for a content management system."
 models:
   # The default model to use if no per-program override is specified
   default: openai:gpt-5-mini
