--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: dspy-cli
 site_description: Deploy DSPy applications with ease
-site_url: https://cmpnd-ai.github.io/dspy-cli 
+site_url: https://cmpnd-ai.github.io/dspy-cli-tool/
 repo_url: https://github.com/cmpnd-ai/dspy-cli-tool
 repo_name: cmpnd-ai/dspy-cli-tool
-edit_uri: edit/main/dspy-cli-tool/docs/
+edit_uri: edit/main/docs/
 
 theme:
   name: material
@@ -41,7 +41,7 @@ theme:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/cmpnd-ai/dspy-cli-tool
+      link: https://github.com/caisco/optimization-platform
 
 plugins:
   - search
