Remove deploy from docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: dspy-cli
-site_description: Deploy DSPy applications with ease
+site_description: Scaffold and serve DSPy applications with ease
 site_url: https://cmpnd-ai.github.io/dspy-cli-tool/
 repo_url: https://github.com/cmpnd-ai/dspy-cli-tool
 repo_name: cmpnd-ai/dspy-cli-tool
