--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
         run: uv sync --extra dev
 
       - name: Lint with ruff
-        run: ruff check .
+        run: uv run ruff check .
 
       - name: Verify tag matches pyproject version
         if: matrix.python-version == '3.11'
@@ -64,7 +64,7 @@ jobs:
       - name: Run tests
         env:
           PYTEST_ADDOPTS: -v
-        run: pytest
+        run: uv run pytest
 
   build:
     name: Build distributions
