--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,13 @@ version = "0.1.3"
 description = "A CLI tool for creating and serving DSPy projects"
 readme = "README.md"
 requires-python = ">=3.11"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "DSPy CLI Contributors"}
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
