--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -104,6 +104,9 @@ jobs:
       contents: read
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        
       - name: Download distributions
         uses: actions/download-artifact@v4
         with:
