Updated  and  to type module params

--- a/src/dspy_cli/templates/code_templates/module_refine.py.template
+++ b/src/dspy_cli/templates/code_templates/module_refine.py.template
@@ -10,5 +10,5 @@ class {class_name}(dspy.Module):
         super().__init__()
         self.predictor = dspy.Refine({signature_class})
 
-    def forward(self, **kwargs):
-        return self.predictor(**kwargs)
+    def forward(self, {forward_params}) -> dspy.Prediction:
+        return self.predictor({forward_kwargs})
