--- a/src/dspy_cli/templates/code_templates/module_react.py.template
+++ b/src/dspy_cli/templates/code_templates/module_react.py.template
@@ -12,5 +12,5 @@ class {class_name}(dspy.Module):
         # You can pass tools as a list of dspy.Tool instances
         self.predictor = dspy.ReAct({signature_class}, tools=tools or [])
 
-    def forward(self, **kwargs):
-        return self.predictor(**kwargs)
+    def forward(self, {forward_params}) -> dspy.Prediction:
+        return self.predictor({forward_kwargs})
