--- a/examples/code-review-agent/pyproject.toml
+++ b/examples/code-review-agent/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "dspy-ai>=3.0.3",
+    "dspy-cli>=0.1.4",
     "mcp>=1.19.0",
     "mlflow>=3.5.1",
     "rich>=14.2.0",
