--- a/examples/code-review-agent/pyproject.toml
+++ b/examples/code-review-agent/pyproject.toml
@@ -11,9 +11,9 @@ requires-python = ">=3.11"
 dependencies = [
     "dspy-ai>=3.0.3",
     "dspy-cli>=0.1.4",
-    "mcp>=1.19.0",
     "mlflow>=3.5.1",
-    "rich>=14.2.0",
+    "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
 ]
 
 [project.optional-dependencies]
