--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,6 +36,9 @@ jobs:
       
       - name: Set up Python
         run: uv python install 3.12
+
+      - name: Install dependencies
+        run: uv sync --extra docs
       
       - name: Build docs
         run: uv run mkdocs build --strict
@@ -49,19 +52,18 @@ jobs:
     runs-on: blacksmith-4vcpu-ubuntu-2404
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v5
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: '3.11'
+          version: "latest"
       
       - name: Install dependencies
-        run: |
-          pip install mkdocs>=1.6.0 mkdocs-material>=9.5.0 mkdocstrings[python]>=0.24.0 pymdown-extensions>=10.7.0
+        run: uv sync --extra docs
       
-      - name: Build documentation
-        run: mkdocs build --strict
-      
+      - name: Build docs and upload artifact
+        run: uv run mkdocs build --strict
+        
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
