--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,6 +8,10 @@ on:
       - 'docs/**'
       - 'mkdocs.yml'
       - '.github/workflows/docs.yml'
+  pull_request:
+    paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
   workflow_dispatch:  # Allow manual trigger
 
 permissions:
@@ -20,26 +24,46 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  validate:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "latest"
+      
+      - name: Set up Python
+        run: uv python install 3.12
+
+      - name: Install dependencies
+        run: uv sync --extra docs
+      
+      - name: Build docs
+        run: uv run mkdocs build --strict
+
   deploy:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: validate
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: blacksmith-4vcpu-ubuntu-2404
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v5
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: '3.11'
+          version: "latest"
       
       - name: Install dependencies
-        run: |
-          pip install mkdocs>=1.6.0 mkdocs-material>=9.5.0 mkdocstrings[python]>=0.24.0 pymdown-extensions>=10.7.0
+        run: uv sync --extra docs
       
-      - name: Build documentation
-        run: mkdocs build --strict
-      
+      - name: Build docs and upload artifact
+        run: uv run mkdocs build --strict
+        
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
