--- a/src/dspy_cli/templates/env.template
+++ b/src/dspy_cli/templates/env.template
@@ -1,12 +1,4 @@
 # API Keys and Secrets
 # Add your API keys here - this file is automatically added to .gitignore
 
-# OpenAI
-OPENAI_API_KEY=
-
-# Anthropic
-# ANTHROPIC_API_KEY=
-
-# Other providers
-# COHERE_API_KEY=
-# TOGETHER_API_KEY=
+{api_key_config}
