--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,8 +27,6 @@ theme:
   features:
     - navigation.instant        # Instant loading
     - navigation.sections       # Section navigation
-    - navigation.tabs           # Top-level tabs
-    - navigation.tabs.sticky    # Keep tabs visible
     - navigation.indexes        # Section index pages
     - navigation.top            # Back to top button
     - navigation.tracking       # URL tracking
@@ -96,13 +94,15 @@ markdown_extensions:
 nav:
   - Home: index.md
   - Getting Started: getting-started.md
+  - Commands:
+      - Overview: commands/index.md
+      - new: commands/new.md
+      - serve: commands/serve.md
+      - generate: commands/generate.md
+  - Deployment: deployment.md
+  - Configuration: configuration.md
   - Use Cases:
       - AI Features: use-cases/ai-features.md
-  - Deployment: deployment.md
-  - Commands:
-      - serve: commands/serve.md
-      - new: commands/new.md
-  - Configuration: configuration.md
-  - Examples:
-      - Blog Tools: https://github.com/cmpnd-ai/dspy-cli-tool/tree/main/examples/blog-tools
-      - Code Review Agent: https://github.com/cmpnd-ai/dspy-cli-tool/tree/main/examples/code-review-agent
+  - Reference:
+      - OpenAPI: OPENAPI.md
+  - Contributing: contributing.md
