--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: dspy-cli
 site_description: Scaffold and serve DSPy applications with ease
-site_url: https://cmpnd-ai.github.io/dspy-cli-tool/
-repo_url: https://github.com/cmpnd-ai/dspy-cli-tool
-repo_name: cmpnd-ai/dspy-cli-tool
+site_url: https://cmpnd-ai.github.io/dspy-cli/
+repo_url: https://github.com/cmpnd-ai/dspy-cli
+repo_name: cmpnd-ai/dspy-cli
 edit_uri: edit/main/docs/
 
 theme:
@@ -41,7 +41,7 @@ theme:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/cmpnd-ai/dspy-cli-tool
+      link: https://github.com/cmpnd-ai/dspy-cli
 
 plugins:
   - search
@@ -105,4 +105,5 @@ nav:
       - AI Features: use-cases/ai-features.md
   - Reference:
       - OpenAPI: OPENAPI.md
+      - Releasing: releasing.md
   - Contributing: contributing.md
