--- a/src/dspy_cli/templates/env.template
+++ b/src/dspy_cli/templates/env.template
@@ -2,3 +2,8 @@
 # Add your API keys here - this file is automatically added to .gitignore
 
 {api_key_config}
+
+# Authentication (optional - only needed if auth.enabled=true in dspy.config.yaml)
+# Generate API keys with: dspy-cli auth
+# Add the SHA-256 hashes below (comma-separated for multiple keys)
+# DSPY_API_KEY_HASHES=sha256:abc123...,sha256:def456...
