--- a/examples/blog-tools/dspy.config.yaml
+++ b/examples/blog-tools/dspy.config.yaml
@@ -37,6 +37,14 @@ models:
       temperature: 1.0
       model_type: chat
 
+    openai:gpt-oss:
+      model: openai/openai/gpt-oss-20b
+      api_base: http://127.0.0.1:1234/v1
+      api_key: placeholder
+      max_tokens: 4096
+      temperature: 1.0
+      model_type: chat
+
 # Optional: Override the model for specific programs
 program_models:
    TaggerCoT: openai:gpt-5-nano
