--- a/examples/blog-tools/dspy.config.yaml
+++ b/examples/blog-tools/dspy.config.yaml
@@ -52,3 +52,9 @@ program_models:
    TweetExtractorPredict: anthropic:sonnet-4.5
    ImageDescriptionGeneratorPredict: openai:gpt-5-mini
 
+# Tracing configuration - controls execution trace capture and logging
+tracing:
+  enabled: true             # Enable/disable tracing globally
+  store_in_logs: true       # Store traces in log files
+  max_trace_depth: 50       # Maximum call stack depth (prevent infinite recursion)
+
