--- a/examples/discord-mod/dspy.config.yaml
+++ b/examples/discord-mod/dspy.config.yaml
@@ -4,12 +4,12 @@
 app_id: discord-mod
 models:
   # The default model to use if no per-program override is specified
-  default: openai:gpt-5-mini
+  default: openai:gpt-5-nano
 
   # Model registry - define all available models here
   registry:
-    openai:gpt-5-mini:
-      model: openai/gpt-5-mini
+    openai:gpt-5-nano:
+      model: openai/gpt-5-nano
       model_type: chat
       max_tokens: 16000
       temperature: 1.0
