--- a/examples/discord-mod/pyproject.toml
+++ b/examples/discord-mod/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.13"
 dependencies = [
     "audioop-lts",
     "dspy-ai>=3.0.3",
-    "dspy-cli",
+    "dspy-cli>=0.1.11",
     "httpx>=0.27.0",
     "py-cord[voice]>=2.6.1",
     "python-dotenv>=1.2.1",
