--- a/examples/discord-mod/dspy.config.yaml
+++ b/examples/discord-mod/dspy.config.yaml
@@ -4,15 +4,15 @@
 app_id: discord-mod
 models:
   # The default model to use if no per-program override is specified
-  default: openai:gpt-5-nano
+  default: openai:gpt-4o-mini
 
   # Model registry - define all available models here
   registry:
-    openai:gpt-5-nano:
-      model: openai/gpt-5-nano
+    openai:gpt-4o-mini:
+      model: openai/gpt-4o-mini
       model_type: chat
-      max_tokens: 16000
-      temperature: 1.0
+      max_tokens: 1000
+      temperature: 0.7
       env: OPENAI_API_KEY
 
 # Optional: Override the model for specific programs
